[project]
name = "ranger"
version = "0.1.0"
description = "Park assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "smolagents>=1.16.1",
    "fire",
    "python-dotenv>=1.1.0",
    "googlemaps>=4.10.0",
]
[project.scripts]
ranger = "ranger.cli:main"
